# llm-in-a-box

./: .gitignore  README.md  justfile  pyproject.toml
llmbox/: __main__.py  llm_manager.py  stt_manager.py  tts_manager.py  utils.py
